<resources>
    <string name="app_name">HoshiPlayer</string>

    <!--tab-->
    <string name="discover">发现音乐</string>
    <string name="mymusic">我的音乐</string>
    <string name="friends">朋友</string>
    <string name="personal">个人</string>

    <!--personal-->
    <string name="presonal_detail">我的资料</string>
    <string name="trends">动态</string>
    <string name="follows">关注</string>
    <string name="fans">粉丝</string>
    <string name="change_skin">换肤</string>
    <string name="night_mode">夜间模式</string>
    <string name="feedback">反馈</string>
    <string name="music_clock">音乐闹钟</string>
    <string name="ring">铃声</string>
    <string name="repeat">重复</string>
    <string name="never">永不</string>
    <string name="change_profile">修改个人简介</string>
    <string name="double_arrow">⇆⇋</string>

    <string name="presonal_avatar">头像</string>
    <string name="presonal_nickname">昵称</string>
    <string name="presonal_sex">性别</string>
    <string name="presonal_birthday">生日</string>
    <string name="presonal_profile">个人简介</string>
    <string name="presonal_information">个人信息</string>
    <string name="new_nicknam">新昵称</string>
    <string name="friend_nicknam">好友昵称</string>
    <string name="secret">保密</string>
    <string name="male">男</string>
    <string name="female">女</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="no_login">暂未登录</string>
    <string name="please_login">请先登录</string>
    <string name="logout">退出登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="phone_number">手机号</string>
    <string name="nickname">昵称</string>
    <string name="confirm_password">确认密码</string>
    <string name="empty_number">--</string>
    <string name="null_content">请输入内容</string>
    <string name="feed_back_hint">欢迎提供对本应用的意见和建议</string>
    <string name="send_success">发送成功</string>

    <!--my music-->
    <string name="local_music">本地音乐</string>
    <string name="recent_played">最近播放</string>
    <string name="my_collection">歌单收藏</string>
    <string name="personal_song_list">个人歌单</string>
    <string name="personal_collection_song_list">个人歌单及收藏</string>
    <string name="song_list">歌单</string>
    <string name="song_list_name">歌单名称</string>
    <string name="new_song_list">新建歌单</string>
    <string name="edit_song_list">编辑歌单</string>
    <string name="song_list_cover">歌单封面</string>
    <string name="no_song_list">还没有任何歌单</string>
    <string name="no_song_song_list">还没有添加任何歌曲</string>
    <string name="collect">收藏</string>
    <string name="add_collect">+ 收藏</string>
    <string name="already_collect">已收藏</string>
    <string name="song_list_song_num">%1$d首</string>
    <string name="my_music_no_login_hint">登录后可查看歌单收藏和个人歌单</string>

    <!--dicover-->
    <string name="official_rank">云音乐官方榜单</string>
    <string name="official_rank_tips">(来源：网易云音乐官方榜)</string>
    <string name="global_rank">云音乐全球榜单</string>
    <string name="global_rank_tips">(来源：网易云音乐全球榜)</string>
    <string name="rank">排行榜</string>
    <string name="download">下载</string>
    <string name="hint_search_music">请输入歌曲名</string>

    <!--friends-->
    <string name="no_trends">暂时还没有内容，立刻发表你的动态吧</string>
    <string name="no_trends_friends">暂时还没有发表任何内容</string>
    <string name="no_trends_list">暂时还没有创建或收藏歌单</string>
    <string name="no_follows">你没有关注任何人</string>
    <string name="no_fans">你暂时还没有粉丝</string>
    <string name="no_login_trends">请登录后再查看好友动态</string>
    <string name="no_profile">这个用户很懒，什么也没有写</string>
    <string name="cannot_remove_collection">你不能移除收藏歌单的歌曲</string>
    <string name="share_trends">分享动态</string>
    <string name="comment">评论</string>
    <string name="comment_num">评论(%1$d)</string>
    <string name="send">发送</string>
    <string name="talk_something">一起聊聊吧~</string>
    <string name="add_music">给动态配上音乐吧~</string>
    <string name="null_trends">你还没有输入动态呢</string>
    <string name="not_yourself_nickname">请不要输入自己的昵称</string>
    <string name="follow_fans">关注 %1$d    |    粉丝 %2$d</string>
    <string name="friend_birthday">生日：%1$s</string>
    <string name="friend_sex">性别：%1$s</string>
    <string name="button_no_follow">＋ 关注</string>
    <string name="button_already_follow">√ 已关注</string>
    <string name="button_follow_each_other">⇋ 互相关注</string>

    <!--connection-->
    <string name="request_fail">请求失败，请检查网络连接</string>
    <!--playing-->
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="loading">努力加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="online_music">在线音乐</string>
    <string name="unknown">未知</string>
    <string name="delete_music">删除%s？</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="play_time_start">00:00</string>
    <string name="now_play">正在播放：%s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="download_success">%s下载完成</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="unable_to_play">暂时无法播放</string>
    <string name="unable_to_download">暂时无法下载</string>
    <string name="unable_to_share">暂时无法分享</string>
    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="menu_setting">功能设置</string>
    <string name="menu_share">推荐给朋友</string>
    <string name="menu_about">关于波尼音乐</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="menu_exit">退出应用</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="share_app">青春，狂热，放纵，自由，当我们带上耳机以后做回自己，这是音乐的魅力。%s：http://fir.im/ponymusic</string>
    <string name="copyright">Copyright © 2015&#045;%d SWUST</string>
    <string name="about_project_url">https://github.com/wangchenyan/PonyMusic</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/wangchenyan</string>
    <string name="music_info">歌曲信息</string>
    <string name="no_permission_location">没有位置信息权限，无法更新天气！</string>
    <string name="no_permission_storage">没有存储空间权限，无法扫描本地歌曲！</string>
    <string name="no_permission_setting">没有权限，无法设置铃声，请授予权限</string>
    <string name="grant_permission_setting">授权成功，请在再次操作以设置铃声</string>
    <string name="no_permission_select_image">没有权限，无法选择图片！</string>
    <string name="activity_playlist">播放列表</string>

</resources>
