<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hoshi.graduationproject.activity.LoginActivity">

    <FrameLayout
        android:id="@+id/top_framelayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/theme_color">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/textView"
            style="@style/top_text_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register" />
    </FrameLayout>

    <EditText
        android:id="@+id/phone_edittext"
        style="@style/login_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/top_framelayout"
        android:drawableLeft="@drawable/ic_phone"
        android:maxLength="11"
        android:inputType="phone"
        android:hint="@string/phone_number" />

    <EditText
        android:id="@+id/nickname_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/login_edittext_style"
        android:drawableLeft="@drawable/tab_personal_selected"
        android:layout_below="@+id/phone_edittext"
        android:maxLength="18"
        android:hint="@string/nickname"/>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/password_edittext_style"
        android:layout_below="@id/nickname_edittext"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/password_confirm_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/password_edittext_style"
        android:layout_below="@id/password_edittext"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_login_button"
        android:layout_margin="24dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_below="@+id/password_confirm_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
