<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ShareActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?theme_color">

        <ImageView
            android:id="@+id/back_feed_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/feedback_send_textView"
            style="@style/top_text_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:padding="10dp"
            android:text="@string/send"
            android:textSize="16sp" />

        <TextView
            style="@style/top_text_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/feedback" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/feedback_editText"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/feed_back_hint"
            android:maxLength="140"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="10dp"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/presonal_detail_background_color" />

</LinearLayout>
