<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_gray"
    android:orientation="vertical"
    tools:context=".activity.ShareActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/theme_color">

        <ImageView
            android:id="@+id/share_trends_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="left"/>

        <TextView
            style="@style/top_text_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/share_trends" />

        <TextView
            android:id="@+id/send_textView"
            style="@style/top_text_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:padding="10dp"
            android:text="@string/send" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/trends_editText"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:paddingTop="10dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/talk_something"
            android:textSize="15sp"
            android:maxLength="140"/>

        <View
            android:id="@+id/trends_line"
            android:layout_width="wrap_content"
            android:layout_height="2px"
            android:layout_below="@id/trends_editText"
            android:background="@color/lite_gray"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trends_line"
            android:gravity="center"
            android:padding="6dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/tab_music_selected"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="left|center_vertical"
                android:text="@string/add_music" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>