<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?theme_color">

        <ImageView
            android:id="@+id/back_alarm_clock"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/loading_button_alarm_clock"
            style="@style/top_image_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/top_loading1" />

        <TextView
            style="@style/top_text_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/music_clock" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/music_clock_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true">

        <TextView
            android:id="@+id/music_clock_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:text="18:35"
            android:textSize="38sp"
            android:textColor="@color/night_day_color"/>

        <ImageView
            android:id="@+id/music_clock_switch"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="3dp"
            android:src="@drawable/ic_switch_close"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="6dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_expand_arrow"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:id="@+id/music_clock_ring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/ring"
            android:textColor="@color/night_day_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/local_music"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_expand_arrow"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:id="@+id/music_clock_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/repeat"
            android:textColor="@color/night_day_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/never"
            android:textColor="@color/gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_expand_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/presonal_detail_background_color" />
</LinearLayout>
