<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hoshi.graduationproject.personal.LoginActivity">

    <FrameLayout
        android:id="@+id/top_framelayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/theme_color">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/top_text_style"
            android:text="@string/login"/>
    </FrameLayout>
    
    <EditText
        android:id="@+id/account_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/login_edittext_style"
        android:drawableLeft="@drawable/tab_personal_selected"
        android:layout_below="@+id/top_framelayout"
        android:hint="@string/account"/>
    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        style="@style/login_edittext_style"
        android:layout_below="@id/account_edittext"
        android:drawableLeft="@drawable/ic_password_normal"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_login_button"
        android:layout_margin="24dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_below="@+id/password_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="2px"
            android:layout_below="@id/reset_password"
            android:layout_alignLeft="@id/reset_password"
            android:layout_alignRight="@id/reset_password"
            android:background="@color/theme_color"/>
    </RelativeLayout>

</RelativeLayout>
